--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ obcaecati harum non quis!</p>
 </div>
 <div class="jumbo-right">
 <img src="img/jumbo.png" alt="jumbo">
+<ul>
+</ul>
 </div>
 </div>
 </div>
@@ -243,10 +245,12 @@ enterprise
 <section id="find-partner" class="inner-container">
 find-partner
 </section>
+
 <!-- section 4 -->
 <section id="operations" class="inner-container">
 operations
 </section>
+
 <!-- section 5 -->
 <section id="partners" class="debug">
 <div class="partners-text inner-container">
@@ -256,14 +260,23 @@ partners-text
 partners-logos
 </div>
 </section>
+
 <!-- section 6 -->
 <section id="call-to-action" class="inner-container">
 call-to-action
 </section>
+
 <!-- section 7 -->
 <section id="faq" class="inner-container">
 faq
 </section>
+
+<!-- section 8 -->
+<section id="business-plan" class="business-plan inner-container d-flex flex-col gap-lg">
+<img src="./img/partner copy.png">
+<h1>Entra in contatto con un partner Dropbox</h1>
+</section>
+
 </main>
 <!-- footer -->
 <footer>
