--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ faq
 <!-- section 8 -->
 <section id="business-plan" class="business-plan inner-container d-flex flex-col gap-lg">
 <img src="./img/partner copy.png">
+<div class="Dropbox"></div>
 <h1>Entra in contatto con un partner Dropbox</h1>
 </section>
 
